<resources>
    <string name="app_name">Mobility 4 CKAN</string>
    <string name="location_permission_request_text">Autorizzi l\'applicazione ad utilizzare il GPS?</string>
    <string name="location_permission_denied_text">Permesso negato! l\'applicazione non può funzionare senza GPS!</string>
    <string name="attendo_gps">Attendo GPS...</string>
    <string name="attendo_il_primo_invio">Attendo il primo invio</string>
    <string name="posizione_corrente">Posizione corrente:</string>
    <string name="dati_ultimo_invio">Dati ultimo invio:</string>
    <string name="ultima_pressione">Ultima Pressione:</string>
    <string name="ultima_luce">Ultima Luce:</string>
    <string name="data_ultimo_invio">Data ultimo invio:</string>
    <string name="ultima_temperatura">Ultima temperatura:</string>
    <string name="prossimo_invio_tra_secondi">Prossimo invio tra secondi:</string>
    <string name="placeholder_countdown">- (GPS non ancora pronto)</string>
    <string name="invia_ora">Invia ora</string>
    <string name="nome_dataset">Nome dataset:</string>
    <string name="inserisci_nome_dataset">Inserisci il nome del dataset:</string>
    <string name="note_dialog">Il nome del dataset deve essere composto da caratteri alphanumerici e minuscoli. I caratteri speciali consentiti sono "-_"</string>
    <string name="note_timer">Scelta non valida</string>
    <string name="placeholder">-</string>
    <string name="sei_offline">Sei offline. Accertati di avere internet disponibile e riapri l\'app</string>
    <string name="gps_disattivato">Attiva il GPS e riavvia l\'applicazione</string>
    <string name="tempo_countdown">Ogni quanti secondi si intende inviare dati al server</string>
    <string name="apikey_req">Immettere l\'API key per l\'upload su CKAN</string>
</resources>
